* Refactor for viewcamera. * Added SecurityPanelScreen skeleton for Dan

--- a/extra/TiVo_Orbiter/orbiter_tivo.ini
+++ b/extra/TiVo_Orbiter/orbiter_tivo.ini
@@ -1,4 +1,5 @@
 IPAddress=10.0.1.3
 PVRDeviceID=44
 OrbiterDeviceID=51
-CameraURL=http://www.hotelunirea.ro:8053/record/current.jpg
+CameraURL=http://localhost:8081/SnapshotJPEG?Resolution=320x240&Quality=Standard
+CameraID=999
