--- a/src/VIPShared/Makefile.lite
+++ b/src/VIPShared/Makefile.lite
@@ -1,7 +1,11 @@
 ROOT=..
 CXXFLAGS = -fPIC -Wall -g -D_GNU_SOURCE
 CPPFLAGS = -I./ -I../../ -I../ -I$(ROOT) -I$(ROOT)/DCE -I$(ROOT)/BD -I$(ROOT)/Orbiter -I$(ROOT)/VIPShared -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -DMULTI_THREADED -DVIPSERVER -DXBTSOCKET -DBLUETOOTH_DONGLE
-CXX = mipsel-linux-g++
+ifeq ($(ARCH),mipsel)
+	CXX = mipsel-linux-g++
+else
+	CXX = g++
+endif
 LDFLAGS = -L$(ROOT)/lib
 LDLIBS =
 
