Added ability to dynamically filter rows based on a configuration file

--- a/src/sql2json/pluto_main.conf
+++ b/src/sql2json/pluto_main.conf
@@ -6,7 +6,7 @@ DHCPDevice:FK_DeviceTemplate,Mac_Range_Low,Mac_Range_High,VendorModelID,SerialNu
 DeviceCategory:FK_DeviceCategory_Parent,Description
 DeviceCategory_DeviceData:FK_DeviceCategory,FK_DeviceData,IK_DeviceData,Required,SetByDevice,AllowedToModify,Description,UseDeviceCategoryDefault
 DeviceCommandGroup:FK_DeviceCategory,Description
-DeviceCommandGroup_Command:FK_Command,Description
+DeviceCommandGroup_Command:FK_DeviceCommandGroup,FK_Command,Description
 DeviceData:Description,FK_ParameterType
 DeviceTemplate:Description,FK_DeviceCategory,ImplementsDCE,IsEmbedded,CommandLine
 DeviceTemplate_DeviceCategory_ControlledVia:FK_DeviceTemplate,FK_DeviceCategory,Description,RerouteMessagesToParent,AutoCreateChildren
