Added ability to overwrite the default sql's to get data for tables adding an extra configuration file : pluto_main_custom_sql.conf

--- a/src/sql2json/pluto_main.conf
+++ b/src/sql2json/pluto_main.conf
@@ -1,4 +1,4 @@
-Command:Description,FK_CommandCategory
+Command:Command.Description,Command.FK_CommandCategory
 CommandCategory:FK_CommandCategory_Parent,Description
 CommandParameter:Description,FK_ParameterType
 Command_CommandParameter:FK_Command,FK_CommandParameter,Description,IsOut
