--- a/src/sql2json/pluto_main.conf
+++ b/src/sql2json/pluto_main.conf
@@ -1,7 +1,7 @@
 Command:Command.Description,Command.FK_CommandCategory
 CommandCategory:FK_CommandCategory_Parent,CommandCategory.Description
 CommandParameter:CommandParameter.Description,FK_ParameterType
-Command_CommandParameter:FK_Command,FK_CommandParameter,Description,IsOut
+Command_CommandParameter:Command_CommandParameter.FK_Command,FK_CommandParameter,Command_CommandParameter.Description,IsOut
 DHCPDevice:FK_DeviceTemplate,Mac_Range_Low,Mac_Range_High,VendorModelID,SerialNumber,Parms,Category,PnpDetectionScript,FK_DeviceCategory,Description
 DeviceCategory:FK_DeviceCategory_Parent,Description
 DeviceCommandGroup:FK_DeviceCategory,Description
