* Custom sql for DeviceCategory

--- a/src/sql2json/pluto_main.conf
+++ b/src/sql2json/pluto_main.conf
@@ -3,7 +3,7 @@ CommandCategory:FK_CommandCategory_Parent,CommandCategory.Description
 CommandParameter:CommandParameter.Description,FK_ParameterType
 Command_CommandParameter:Command_CommandParameter.FK_Command,FK_CommandParameter,Command_CommandParameter.Description,IsOut
 DHCPDevice:FK_DeviceTemplate,Mac_Range_Low,Mac_Range_High,VendorModelID,SerialNumber,Parms,Category,PnpDetectionScript,FK_DeviceCategory,Description
-DeviceCategory:FK_DeviceCategory_Parent,Description
+DeviceCategory:FK_DeviceCategory_Parent,DeviceCategory.Description
 DeviceCommandGroup:FK_DeviceCategory,Description
 DeviceCommandGroup_Command:FK_DeviceCommandGroup,FK_Command,Description
 DeviceData:Description,FK_ParameterType
