Added json stuff the Router-lite

--- a/src/DCERouter/Makefile.lite
+++ b/src/DCERouter/Makefile.lite
@@ -2,11 +2,11 @@ SNR_CPPFLAGS ?= <-mkr_t_compile_defines->
 
 ROOT = ..
 CXXFLAGS = -Wall -ggdb3 -DxAUDIDEMO -fmessage-length=0
-CPPFLAGS = -I$(ROOT)/ -I$(ROOT)/DCE -D_REENTRANT -D_GNU_SOURCE $(SNR_CPPFLAGS) -DUSE_LZO_DATAGRID #-I/usr/include/libxml2/
+CPPFLAGS = -I$(ROOT)/ -I$(ROOT)/DCE -D_REENTRANT -D_GNU_SOURCE $(SNR_CPPFLAGS) -DUSE_LZO_DATAGRID -I/usr/include/json #-I/usr/include/libxml2/
 LDFLAGS = -L$(ROOT)/lib #-lxml2
 
 #LDLIBS = -lpthread -lmysqlclient_r -lattr -lDCECommon -lSerializeClass -lPlutoUtils -lpluto_main -lFakeEPG -lqt-mt -lmyth-0.16 -lmythtv-0.16
-LDLIBS = -lpthread -lDCECommon -lSerializeClass -lPlutoUtils -ldl #-lpluto_main -lattr
+LDLIBS = -lpthread -lDCECommon -lSerializeClass -lPlutoUtils -ldl -json #-lpluto_main -lattr
 
 #<-mkr_B_use_mysql_wrapper_b->
 #CPPFLAGS += -I/usr/include/mysql
@@ -33,8 +33,10 @@ sources = \
 		EventHandler_CriteriaList.cpp \
 		Main.cpp \
 		DCERouter.cpp \
+		DataLayer_JSON.cpp \
 		DCERouter_CreatePluginHardCoded_Impl.cpp \
-		../db_wrapper/db_wrapper.cpp ../db_wrapper/ClientSocket.cpp ../db_wrapper/Socket.cpp
+		../db_wrapper/db_wrapper.cpp ../db_wrapper/ClientSocket.cpp ../db_wrapper/Socket.cpp 
+		
 
 
 #sources += ../Gen_Devices/Media_PluginBase.cpp ../Media_Plugin/Media_Plugin.cpp ../Media_Plugin/MediaPluginInfo.cpp
