--- a/src/DCERouter/Makefile.lite
+++ b/src/DCERouter/Makefile.lite
@@ -6,7 +6,7 @@ CPPFLAGS = -I$(ROOT)/ -I$(ROOT)/DCE -D_REENTRANT -D_GNU_SOURCE $(SNR_CPPFLAGS) -
 LDFLAGS = -L$(ROOT)/lib #-lxml2
 
 #LDLIBS = -lpthread -lmysqlclient_r -lattr -lDCECommon -lSerializeClass -lPlutoUtils -lpluto_main -lFakeEPG -lqt-mt -lmyth-0.16 -lmythtv-0.16
-LDLIBS = -lpthread -lDCECommon -lSerializeClass -lPlutoUtils -ldl -json #-lpluto_main -lattr
+LDLIBS = -lpthread -lDCECommon -lSerializeClass -lPlutoUtils -ldl -ljson #-lpluto_main -lattr
 
 #<-mkr_B_use_mysql_wrapper_b->
 #CPPFLAGS += -I/usr/include/mysql
