--- a/src/PlutoUtils/Makefile.lite
+++ b/src/PlutoUtils/Makefile.lite
@@ -3,7 +3,7 @@ SNR_CPPFLAGS ?= <-mkr_t_compile_defines->
 ROOT=..
 VIP = ../VIPShared
 GDEV = ./Gen_Devices
-CXXFLAGS = -fPIC -Wall -g -ggdb3 -D_GNU_SOURCE
+CXXFLAGS = -fPIC -Wall -Os -D_GNU_SOURCE
 
 have_httpfetcher = $(wildcard /usr/lib/libhttp_fetcher.*)
 
