--- a/src/sql2json/pluto_main_custom_sql.conf
+++ b/src/sql2json/pluto_main_custom_sql.conf
@@ -5,4 +5,10 @@ Command_CommandParameter:JOIN Command ON PK_Command = Command_CommandParameter.F
 DeviceCategory:INNER JOIN DeviceTemplate ON DeviceTemplate.FK_DeviceCategory = PK_DeviceCategory WHERE PK_DeviceTemplate IN ($DeviceTemplate)
 DeviceTemplate_DeviceData:WHERE FK_DeviceTemplate IN ($DeviceTemplate) UNION SELECT PK_DeviceTemplate,FK_DeviceData,IK_DeviceData,Required,AllowedToModify,SetByDevice,DeviceCategory_DeviceData.Description FROM DeviceCategory_DeviceData INNER JOIN DeviceTemplate ON DeviceCategory_DeviceData.FK_DeviceCategory = PK_DeviceTemplate WHERE PK_DeviceTemplate IN ($DeviceTemplate)
 DeviceTemplate_DeviceTemplate_ControlledVia:WHERE FK_DeviceTemplate IN ($DeviceTemplate) UNION SELECT -1,FK_DeviceTemplate,DeviceTemplate.PK_DeviceTemplate,DeviceTemplate_DeviceCategory_ControlledVia.Description,RerouteMessagesToParent,AutoCreateChildren FROM DeviceTemplate_DeviceCategory_ControlledVia JOIN DeviceTemplate ON DeviceTemplate_DeviceCategory_ControlledVia.FK_DeviceCategory = DeviceTemplate.FK_DeviceCategory WHERE FK_DeviceTemplate IN ($DeviceTemplate) 
-
+DeviceCommandGroup:JOIN DeviceCategory ON FK_DeviceCategory = PK_DeviceCategory INNER JOIN DeviceTemplate ON DeviceTemplate.FK_DeviceCategory = PK_DeviceCategory WHERE PK_DeviceTemplate IN ($DeviceTemplate)
+DeviceData:JOIN DeviceTemplate_DeviceData ON FK_DeviceData = PK_DeviceData WHERE FK_DeviceTemplate IN ($DeviceTemplate)
+Event:JOIN DeviceTemplate_Event ON FK_Event = PK_Event WHERE FK_DeviceTemplate IN ($DeviceTemplate)
+EventCategory:JOIN Event ON FK_EventCategory = PK_EventCategory JOIN DeviceTemplate_Event ON FK_Event = PK_Event WHERE FK_DeviceTemplate IN ($DeviceTemplate)
+EventParameter:JOIN Event_EventParameter ON Event_EventParameter.FK_EventParameter = PK_EventParameter JOIN DeviceTemplate_Event ON Event_EventParameter.FK_Event = DeviceTemplate_Event.FK_Event WHERE FK_DeviceTemplate IN ($DeviceTemplate)
+Event_EventParameter:JOIN DeviceTemplate_Event ON Event_EventParameter.FK_Event = DeviceTemplate_Event.FK_Event WHERE FK_DeviceTemplate IN ($DeviceTemplate)
+Manufacturer:JOIN DeviceTemplate ON PK_Manufacturer = FK_Manufacturer WHERE PK_DeviceTemplate IN ($DeviceTemplate)
