--- a/src/PlutoUtils/Makefile.lite
+++ b/src/PlutoUtils/Makefile.lite
@@ -34,7 +34,7 @@ endif
 
 CPPFLAGS += -DEMBEDDED_LMCE
 
-sources = CommonIncludes.cpp FileUtils.cpp MultiThreadIncludes.cpp Other.cpp ProcessUtils.cpp StringUtils.cpp getch.cpp md5c.cpp minilzo.cpp uuencode.cpp LinuxSerialUSB.cpp ThreadedClass.cpp \
+sources = CommonIncludes.cpp FileUtils.cpp MultiThreadIncludes.cpp Other.cpp ProcessUtils.cpp StringUtils.cpp getch.cpp md5c.cpp minilzo.cpp uuencode.cpp LinuxSerialUSB.cpp ThreadedClass.cpp LZO.cpp \
 	  ../db_wrapper/db_wrapper.cpp ../db_wrapper/ClientSocket.cpp ../db_wrapper/Socket.cpp
 
 all: libPlutoUtils.so all-recursive
