typo related to regen

--- a/src/Slim_Server_Streamer/Makefile
+++ b/src/Slim_Server_Streamer/Makefile
@@ -26,7 +26,7 @@ XTRALDLIBS =
 
 Gen_Dev_Files +=
 sources += SqueezeBox_Player.cpp $(GENDEV)/SqueezeBox_PlayerBase.cpp
-sources += Sound_Bridge.cpp.cpp $(GENDEV)/Sound_BridgeBase.cpp
+sources += Sound_Bridge.cpp $(GENDEV)/Sound_BridgeBase.cpp
 
 
 #<-dceag-mf-b->
