symlink Makefile.lite, architecture-dependent compiler

--- a/src/General_Info_Plugin_Lite/Makefile
+++ b/src/General_Info_Plugin_Lite/Makefile
@@ -19,6 +19,10 @@ Gen_Dev_Files = $(GENDEV)/General_Info_PluginBase.cpp
 sources = Main.cpp General_Info_Plugin.cpp $(Gen_Dev_Files)
 #<-dceag-mh-e->
 
+ifeq($(ARCH),mipsel)
+	CXX=mipsel-linux-g++
+endif
+
 CXXFLAGS +=
 CPPFLAGS +=
 LDFLAGS +=
