added 1440x900 to the list

--- a/src/X-Resolution/Resolutions.conf
+++ b/src/X-Resolution/Resolutions.conf
@@ -401,6 +401,14 @@ resolution
 
 resolution
 {
+	name = "1440x900"
+	width = 1440
+	height = 900
+	visible = false
+}
+
+resolution
+{
 	name = "1920x1440"
 	width = 1920
 	height = 1440
