--- a/extra/TiVo_Orbiter/orbiter_tivo.ini
+++ b/extra/TiVo_Orbiter/orbiter_tivo.ini
@@ -1,5 +1,7 @@
-IPAddress=10.0.1.3
-PVRDeviceID=44
-OrbiterDeviceID=51
+IPAddress=10.0.0.79
+PVRDeviceID=5
+OrbiterDeviceID=102
 CameraURL=http://localhost:8081/SnapshotJPEG?Resolution=320x240&Quality=Standard
-CameraID=999
+CameraID=100
+Embedded=1
+EmbeddedScenariosFile=/etc/pluto/scenarios
