--- a/src/Makefile.lite
+++ b/src/Makefile.lite
@@ -5,10 +5,10 @@ export SNR_CPPFLAGS SNR_LDFLAGS
 
 #export PATH="$PATH:/home/radu/SVN/openwrt/trunk/staging_dir/toolchain-mipsel_gcc3.4.6/bin"
 
-BINS=DCERouter MessageSend pluto-lzo interfeed ANSI-to-HTML Sleep
+BINS=DCERouter MessageSend pluto-lzo interfeed ANSI-to-HTML Sleep NetworkTest
 DEVS=ZWave
 LIBS=Serial SerializeClass PlutoUtils DCE
-Plugins=General_Info_Plugin_Lite
+Plugins=General_Info_Plugin_Lite Lighting_Plugin_Lite Climate_Plugin_Lite
 
 all: libs bins
 ifeq ($(ARCH),mipsel)
