add event handling

--- a/src/sql2json/pluto_main.conf
+++ b/src/sql2json/pluto_main.conf
@@ -1,7 +1,10 @@
+CannedEvents:CannedEvents.Description,CannedEvents.FK_Event,CannedEvents.bIsAnd,CannedEvents.bIsNot
+CannedEvents_CriteriaParmList:CannedEvents_CriteriaParmList.FK_CannedEvents,CannedEvents_CriteriaParmList.FK_CriteriaParmList,CannedEvents_CriteriaParmList.Description,CannedEvents_CriteriaParmList.Comments,CannedEvents_CriteriaParmList.Operator,CannedEvents_CriteriaParmList.Parm,CannedEvents_CriteriaParmList.DefaultValue,CannedEvents_CriteriaParmList.ExtraInfo,CannedEvents_CriteriaParmList.Required
 Command:Command.Description,Command.FK_CommandCategory
 CommandCategory:FK_CommandCategory_Parent,CommandCategory.Description
 CommandParameter:CommandParameter.Description,FK_ParameterType
 Command_CommandParameter:Command_CommandParameter.FK_Command,FK_CommandParameter,Command_CommandParameter.Description,IsOut
+CriteriaParmList:CriteriaParmList.FK_ParameterType,CriteriaParmList.Description,
 DHCPDevice:FK_DeviceTemplate,Mac_Range_Low,Mac_Range_High,VendorModelID,SerialNumber,Parms,Category,PnpDetectionScript,FK_DeviceCategory,Description
 DeviceCategory:FK_DeviceCategory_Parent,DeviceCategory.Description
 DeviceCommandGroup:DeviceCommandGroup.FK_DeviceCategory,DeviceCommandGroup.Description
