--- a/src/General_Info_Plugin_Lite/Makefile.prep
+++ b/src/General_Info_Plugin_Lite/Makefile.prep
@@ -1,3 +1,5 @@
+# -*- Makefile -*-
+
 #<-dceag-mh-b->
 GENDEV=../Gen_Devices
 
@@ -6,10 +8,10 @@ SNR_LDFLAGS ?= <-mkr_t_compile_libs->
 
 ROOT = ..
 CXX = g++
-CXXFLAGS = -Wall -fPIC -Os
+CXXFLAGS = -Wall -fPIC -ggdb3
 CPPFLAGS = -I$(ROOT) -I$(ROOT)/DCE -I/usr/include/mysql $(SNR_CPPFLAGS)
 LDFLAGS = $(SNR_LDFLAGS) -L$(ROOT)/lib
-BASELDLIBS = -lSerializeClass -lDCECommon -lPlutoUtils -lpthread
+BASELDLIBS = -lSerializeClass -lDCECommon -lPlutoUtils -lmysqlclient_r -lpthread
 
 MYNAME = General_Info_Plugin_Lite
 VERSION = 2.0.0
@@ -24,7 +26,7 @@ ifeq ($(ARCH),mipsel)
 endif
 
 CXXFLAGS +=
-CPPFLAGS += -DEMBEDDED_LMCE
+CPPFLAGS +=
 LDFLAGS +=
 XTRALDLIBS =
 
@@ -48,7 +50,7 @@ General_Info_Plugin_Lite.so: $(sources:.cpp=.o)
 	cp $@ ../bin
 	chmod +x post_make.sh
 	./post_make.sh $@
-		
+
 General_Info_Plugin_Lite: $(sources:.cpp=.o)
 	$(CXX) -o $(MYNAME) $(call cpath,$+) $(LDFLAGS) $(LDLIBS)
 	cp $@ ../bin
