--- a/src/Shoutcast_Radio_Plugin/Makefile.prep
+++ b/src/Shoutcast_Radio_Plugin/Makefile.prep
@@ -1,3 +1,4 @@
+# -*- Makefile -*-
 #<-dceag-mh-b->
 GENDEV=../Gen_Devices
 
@@ -44,7 +45,7 @@ Shoutcast_Radio_Plugin.so: $(sources:.cpp=.o)
 	cp $@ ../bin
 	chmod +x post_make.sh
 	./post_make.sh $@
-		
+
 Shoutcast_Radio_Plugin: $(sources:.cpp=.o)
 	$(CXX) -o $(MYNAME) $(call cpath,$+) $(LDFLAGS) $(LDLIBS)
 	cp $@ ../bin
