More cleanups for intrepid build.

--- a/src/Orbiter_Plugin/Makefile.prep
+++ b/src/Orbiter_Plugin/Makefile.prep
@@ -9,7 +9,7 @@ ROOT = ..
 CXXFLAGS = -Wall -fPIC -ggdb3
 CPPFLAGS = -I$(ROOT) -I$(ROOT)/DCE $(SNR_CPPFLAGS)
 LDFLAGS = $(SNR_LDFLAGS) -L$(ROOT)/lib
-BASELDLIBS = -lSerializeClass -lDCECommon -lPlutoUtils -lpthread
+BASELDLIBS = -lSerializeClass -lDCECommon -lPlutoUtils -lpthread ../Datagrid_Plugin/Datagrid_Plugin.so
 
 MYNAME = Orbiter_Plugin
 VERSION = 2.0.0
