Move pluto-avwizard-sounds-1.1 to pluto-avwizard-sounds & adjust to work with new media location.

--- a/src/pluto-avwizard-sounds/Makefile
+++ b/src/pluto-avwizard-sounds/Makefile
@@ -1,9 +1,9 @@
 all:
 	echo make all
 
-install:
+install: 
 	mkdir -p sounds-temp
-	cd sounds-temp ; tar xvfz ../pluto-avwizard-sounds_1.1.orig.tar.gz ; cd ..
+	cd sounds-temp ; tar xvfz ../pluto-avwizard-sounds.tar.gz ; cd ..
 	cd sounds-temp ; mv home $(DESTDIR)/
 	rm -rf sounds-temp
 
