Added room to devices file. Parse rooms for description for pluto.json

--- a/src/DCERouter/DCERouter_Lite_2005.vcproj
+++ b/src/DCERouter/DCERouter_Lite_2005.vcproj
@@ -260,6 +260,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\Room_Data.h"
+				>
+			</File>
+			<File
 				RelativePath=".\Scene_Data.h"
 				>
 			</File>
