verbose logging by default

--- a/src/Embedded_Boot/etc/pluto.conf
+++ b/src/Embedded_Boot/etc/pluto.conf
@@ -1,5 +1,5 @@
-LogLevels = 1,5,7,8
-#ImmediatelyFlushLog = 1
+#LogLevels = 1,5,7,8
+ImmediatelyFlushLog = 1
 #Number of log files to keep
 NumberOfCopies= 4
 #rotation interval in seconds of log files
