--- a/src/Embedded_Boot/etc/pluto.conf
+++ b/src/Embedded_Boot/etc/pluto.conf
@@ -1,7 +1,7 @@
 #LogLevels = 1,5,7,8
 ImmediatelyFlushLog = 1
 #Number of log files to keep
-NumberOfCopies= 4
+NumberOfCopies= 10
 #rotation interval in seconds of log files
-RotationInterval= 1 * 60 * 60
+RotationInterval= 15 * 60
 
