--- a/src/Event_Plugin_Lite/Makefile.lite
+++ b/src/Event_Plugin_Lite/Makefile.lite
@@ -30,7 +30,7 @@ XTRALDLIBS =
 
 Gen_Dev_Files += 
 sources += Criteria.cpp  CriteriaParmNesting.cpp \
-	Criteria_EvaluateExpression.cpp TimedEvent.cpp sunrise.cpp
+	Criteria_EvaluateExpression.cpp TimedEvent.cpp sunrise.cpp EventHandler.cpp
 
 #<-dceag-mf-b->
 LDLIBS = $(XTRALDLIBS) $(BASELDLIBS)
