--- a/src/UbuntuDiskless/files.d/apt.conf
+++ b/src/UbuntuDiskless/files.d/apt.conf
@@ -27,7 +27,7 @@ Content="${Content}Pin: origin\n"
 Content="${Content}Pin-Priority: 9999\n"
 Content="${Content}\n"
 Content="${Content}Package: *\n"
-Content="${Content}Pin: release v=7.10,o=Ubuntu,a=gutsy,l=Ubuntu\n"
+Content="${Content}Pin: release v=8.10,o=Ubuntu,a=hardy,l=Ubuntu\n"
 Content="${Content}Pin-Priority: 9998\n"
 echo -e "$Content" > "${Parm_RootLocation}/${File}"
 
