--- a/src/Makefile.lite
+++ b/src/Makefile.lite
@@ -1,14 +1,15 @@
-SNR_CPPFLAGS=
-SNR_LDFLAGS=
+#export SNR_CPPFLAGS="-DDEBUG"
+#export SNR_LDFLAGS=""
 
-export SNR_CPPFLAGS SNR_LDFLAGS
+#export SNR_CPPFLAGS
+#export SNR_LDFLAGS
 
 #export PATH="$PATH:/home/radu/SVN/openwrt/trunk/staging_dir/toolchain-mipsel_gcc3.4.6/bin"
 
 BINS=DCERouter MessageSend pluto-lzo interfeed ANSI-to-HTML Sleep NetworkTest RemoteAssistance
 DEVS=ZWave
 LIBS=Serial SerializeClass PlutoUtils DCE
-Plugins=General_Info_Plugin_Lite Lighting_Plugin_Lite Climate_Plugin_Lite Event_Plugin_Lite Security_Plugin_Lite
+Plugins=General_Info_Plugin_Lite Lighting_Plugin_Lite Climate_Plugin_Lite Event_Plugin_Lite Security_Plugin_Lite XML_Data_Handler_Plugin_Lite Basic_XML_Data_Source_Plugin_Lite
 
 all: libs bins
 ifeq ($(ARCH),mipsel)
